changed the copywriting

--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -23,7 +23,7 @@
                                     <!-- <p class="text-3xl mb-10 ultra">NGN 6,000</p> -->
                                     <div class="w-full p-5 flex gap-5 items-center justify-between">
                                         <div class="greenDot"></div>
-                                        <p class="flex-1 font-semibold text-lg">Total Mine: <b class="mineTotal"></b></p>
+                                        <p class="flex-1 font-semibold text-lg">Total Amount Traded: <b class="mineTotal"></b></p>
                                     </div>
                                     <div class="w-full p-5 flex gap-5 items-center justify-between">
                                         <div class="greenDot"></div>
@@ -54,7 +54,7 @@
                                 <div
                                     class="border border-gray-800 rounded-md bg-black p-3 my-10 shadow-md shadow-gray-700 flex flex-col items-center justify-center gap-1 max-w-[900px] mx-auto">
                                     <h1 class="ultra text-xl md:text-4xl mt-4 text-green-500 tracking-wider text-center">
-                                        NairaCity Mining Engine
+                                        NairaCity Trading Engine
                                     </h1>
                                     <p class="text-green-100 text-center">Our AI bot trades your money on the background
                                         <br> and returns
@@ -63,18 +63,18 @@
                                     <img src="/public/img/minemine.gif" class="hidden w-[300px] object-contain mineGIf" alt="">
                                     <img src="/public/img/oops.png" class="w-[300px] object-contain oops mineGIf" alt="">
                                     <img src="/public/img/power.jpg" class="hidden w-[300px] object-contain oops power cursor-pointer" alt="">
-                                    <p class="text-sm text-center font-bold hidden mining">Mining...</p>
-                                    <p class="mine24 text-gray-100 text-md font-semibold text-center mx-5 hidden">Click to start mining for the next 24 hours
+                                    <p class="text-sm text-center font-bold hidden mining">Trading...</p>
+                                    <p class="mine24 text-gray-100 text-md font-semibold text-center mx-5 hidden">Click to activate AI bots to help you trade for the next 24 hours
                                     </p>
                                     <div class="hidden minemineParent">
-                                        <p class="text-green-500 font-bold text-center text-lg mt-5">Total amount mined:
+                                        <p class="text-green-500 font-bold text-center text-lg mt-5">Total amount traded:
                                         </p>
                                         <p class="bg-gray-400 py-3 px-20 rounded-md text-black ultra text-2xl">NGN <span class="boldMineBal"></span>
                                         </p>
                                         
                                     </div>
                                     <div class="buyCoup">
-                                        <p class="text-green-500 font-bold text-center text-lg mt-5">Verify your account to start mining
+                                        <p class="text-green-500 font-bold text-center text-lg mt-5">Verify your account to initialize AI bots for trading
                                         </p>
                                         <p class="text-gray-100 text-md font-semibold text-center mx-5">Buy a coupon code from our vendor and enter it in your dashboard to verify your account, <a href="deposit" class="text-green-800 border-b border-green-800">click here</a> to buy a coupon code for any package.
                                         </p>
@@ -85,7 +85,7 @@
                                     <div
                                         class="border border-gray-800 rounded-md lightDark p-7 shadow-md shadow-gray-700 flex items-center justify-between gap-10 w-full max-w-[400px] mx-auto">
                                         <div class="space-y-2">
-                                            <p class="text-gray-200 font-bold text-xl">Mining Balance</p>
+                                            <p class="text-gray-200 font-bold text-xl">Trading Balance</p>
                                             <p class="ultra text-2xl text-gray-400">NGN <span class="xminingBalance"></span></p>
                                         </div>
                                         <div class="purpleGrad w-10 h-10 opacity-50"></div>
