--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -15,7 +15,7 @@
 					<h1 class="text-5xl md:text-6xl ultra purples">aira<span class="blue">City</span></h1>
 				</div>
 				<h2 class="mt-4 text-xl text-center md:text-left italic tracking-wide max-w-[360px] md:max-w-[400px] text-gray-200">
-					The city of earning online by simply mining with your mobile data and referring your friends to this awesome platform, you can immediately withdraw NGN 1,000 on every referall
+					The city of earning online by simply activating our AI bots( that handles trading sophistication and reduce any sort of risks in the stock market) with your mobile data daily and referring your friends to this awesome platform, you can immediately withdraw NGN 1,000 on every referall
 				</h2>
 				<a class="startBtn">
 					<button class="dlbtn p-4 rounded-full px-10 font-bold text-lg tracking-wide">
@@ -48,13 +48,13 @@
 			<div class="my-10">
 				<p class="text-lg max-w-[800px] text-center mx-auto">
 					NairaCity is a dual-purpose platform made up of subsidiaries that provide an opportunity to utilize NairaCity
-					AI bots in the background, these bots trades your investment in the stock market and returns profit every two weeks, you will be elligle to withdraw these profits every two weeks, It is one of the leading mining platforms, offering mining
+					AI bots in the background, these bots trades your investment in the stock market and returns profit every day, you will be elligle to withdraw these profits if you have at least NGN 2,000 as your trading proifit, It is one of the leading trading platforms, offering trading
 					capacities in every range - especially those who have no idea how the stock market or trading works.
 					<br> <br>
-					NairaCity Decentralized mining platform based on smart contracts that connects people from all over the world and
+					NairaCity Decentralized trading platform based on smart contracts that connects people from all over the world and
 					opens the limitless possibilities of the new economic financial system.
 					<br> <br>
-					Our mission is to make the process of earning passive income easy and fast for everyone, you can immediately withdraw your referall bonus on every new user you bring in, NairaCity offers you the best experience of earning online
+					Our mission is to make the process of earning passive income easy and fast for everyone, and giving literally anyone the oppurtunity to be an investor in the stock market and earn from trading with 0 risks through the use of Artificial Intelligence Technology (AI), you can immediately withdraw your referall bonus on every new user you bring in, NairaCity offers you the best experience of earning online
 				</p>
 			</div>
 		</div>
@@ -131,22 +131,22 @@
 			</div>
 			<div class="border border-gray-800 rounded-md lightDark p-3 my-10 shadow-md shadow-gray-700 flex flex-col items-center justify-center gap-1">
 				<h1 class="ultra text-2xl md:text-4xl mt-4 text-green-500 tracking-wider">Starter Package</h1>
-				<p class="text-green-100">Mine <b>NGN300</b> Every 24 Hour</p>
+				<p class="text-green-100">Get <b>NGN 200</b> as profit Every 24 Hour</p>
 				<div class="greenLine h-[2px] my-5 w-full" ></div>
 				<p class="text-3xl mb-10 ultra">NGN 2,000</p>
 				<div class="w-full p-5 flex gap-5 items-center justify-between">
 					<div class="greenDot"></div>
-					<p class="flex-1 font-semibold text-lg">Mining Amount: <b>300 Naira</b></p>
+					<p class="flex-1 font-semibold text-lg">Daily Trading Profit: <b>200 Naira</b></p>
 				</div>
 				<div class="w-full p-5 flex gap-5 items-center justify-between">
 					<div class="greenDot"></div>
-					<p class="flex-1 font-semibold text-lg">Mining Frequency: Every <b>24 Hour</b></p>
+					<p class="flex-1 font-semibold text-lg">Daily Trading Profit: Every <b>24 Hour</b></p>
 				</div>
 				<div class="w-full p-5 flex gap-5 items-center justify-between">
 					<div class="greenDot"></div>
-					<p class="flex-1 font-semibold text-lg">Daily Mining: Enabled</p>
+					<p class="flex-1 font-semibold text-lg">Daily Trading: Enabled</p>
 				</div>
-				<a href="#">
+				<a href="deposit">
 					<button class="greenBtn shadow-md shadow-green-700 p-4 rounded-full px-10 font-bold text-lg tracking-wide my-5">
 						Buy Package
 					</button>
@@ -154,22 +154,22 @@
 			</div>
 			<div class="border border-gray-800 rounded-md lightDark p-3 my-10 shadow-md shadow-gray-700 flex flex-col items-center justify-center gap-1">
 				<h1 class="ultra text-2xl md:text-4xl mt-4 text-green-500 tracking-wider">Special Package</h1>
-				<p class="text-green-100">Mine <b>NGN600</b> Every 24 Hour</p>
+				<p class="text-green-100">Get <b>NGN 500</b> as profit Every 24 Hour</p>
 				<div class="greenLine h-[2px] my-5 w-full" ></div>
-				<p class="text-3xl mb-10 ultra">NGN 4,000</p>
+				<p class="text-3xl mb-10 ultra">NGN 5,000</p>
 				<div class="w-full p-5 flex gap-5 items-center justify-between">
 					<div class="greenDot"></div>
-					<p class="flex-1 font-semibold text-lg">Mining Amount: <b>600 Naira</b></p>
+					<p class="flex-1 font-semibold text-lg">Daily Trading Profit: <b>500 Naira</b></p>
 				</div>
 				<div class="w-full p-5 flex gap-5 items-center justify-between">
 					<div class="greenDot"></div>
-					<p class="flex-1 font-semibold text-lg">Mining Frequency: Every <b>24 Hour</b></p>
+					<p class="flex-1 font-semibold text-lg">Daily Trading Profit: Every <b>24 Hour</b></p>
 				</div>
 				<div class="w-full p-5 flex gap-5 items-center justify-between">
 					<div class="greenDot"></div>
-					<p class="flex-1 font-semibold text-lg">Daily Mining: Enabled</p>
+					<p class="flex-1 font-semibold text-lg">Daily Trading: Enabled</p>
 				</div>
-				<a href="#">
+				<a href="deposit">
 					<button class="greenBtn shadow-md shadow-green-700 p-4 rounded-full px-10 font-bold text-lg tracking-wide my-5">
 						Buy Package
 					</button>
@@ -177,22 +177,91 @@
 			</div>
 			<div class="border border-gray-800 rounded-md lightDark p-3 my-10 shadow-md shadow-gray-700 flex flex-col items-center justify-center gap-1">
 				<h1 class="ultra text-2xl md:text-4xl mt-4 text-green-500 tracking-wider">Premium Package</h1>
-				<p class="text-green-100">Mine <b>NGN1000</b> Every 24 Hour</p>
+				<p class="text-green-100">Get <b>NGN 1,000</b> as profit Every 24 Hour</p>
 				<div class="greenLine h-[2px] my-5 w-full" ></div>
-				<p class="text-3xl mb-10 ultra">NGN 6,000</p>
+				<p class="text-3xl mb-10 ultra">NGN 10,000</p>
 				<div class="w-full p-5 flex gap-5 items-center justify-between">
 					<div class="greenDot"></div>
-					<p class="flex-1 font-semibold text-lg">Mining Amount: <b>1000 Naira</b></p>
+					<p class="flex-1 font-semibold text-lg">Daily Trading Profit: <b>1,000 Naira</b></p>
 				</div>
 				<div class="w-full p-5 flex gap-5 items-center justify-between">
 					<div class="greenDot"></div>
-					<p class="flex-1 font-semibold text-lg">Mining Frequency: Every <b>24 Hour</b></p>
+					<p class="flex-1 font-semibold text-lg">Daily Trading Profit: Every <b>24 Hour</b></p>
 				</div>
 				<div class="w-full p-5 flex gap-5 items-center justify-between">
 					<div class="greenDot"></div>
-					<p class="flex-1 font-semibold text-lg">Daily Mining: Enabled</p>
+					<p class="flex-1 font-semibold text-lg">Daily Trading: Enabled</p>
 				</div>
-				<a href="#">
+				<a href="deposit">
+					<button class="greenBtn shadow-md shadow-green-700 p-4 rounded-full px-10 font-bold text-lg tracking-wide my-5">
+						Buy Package
+					</button>
+				</a>
+			</div>
+			<div class="border border-gray-800 rounded-md lightDark p-3 my-10 shadow-md shadow-gray-700 flex flex-col items-center justify-center gap-1">
+				<h1 class="ultra text-2xl md:text-4xl mt-4 text-green-500 tracking-wider">Pro Package</h1>
+				<p class="text-green-100">Get <b>NGN 2,000</b> as profit Every 24 Hour</p>
+				<div class="greenLine h-[2px] my-5 w-full" ></div>
+				<p class="text-3xl mb-10 ultra">NGN 20,000</p>
+				<div class="w-full p-5 flex gap-5 items-center justify-between">
+					<div class="greenDot"></div>
+					<p class="flex-1 font-semibold text-lg">Daily Trading Profit: <b>2,000 Naira</b></p>
+				</div>
+				<div class="w-full p-5 flex gap-5 items-center justify-between">
+					<div class="greenDot"></div>
+					<p class="flex-1 font-semibold text-lg">Daily Trading Profit: Every <b>24 Hour</b></p>
+				</div>
+				<div class="w-full p-5 flex gap-5 items-center justify-between">
+					<div class="greenDot"></div>
+					<p class="flex-1 font-semibold text-lg">Daily Trading: Enabled</p>
+				</div>
+				<a href="deposit">
+					<button class="greenBtn shadow-md shadow-green-700 p-4 rounded-full px-10 font-bold text-lg tracking-wide my-5">
+						Buy Package
+					</button>
+				</a>
+			</div>
+			<div class="border border-gray-800 rounded-md lightDark p-3 my-10 shadow-md shadow-gray-700 flex flex-col items-center justify-center gap-1">
+				<h1 class="ultra text-2xl md:text-4xl mt-4 text-green-500 tracking-wider">Lite Package</h1>
+				<p class="text-green-100">Get <b>NGN 5,000</b> as profit Every 24 Hour</p>
+				<div class="greenLine h-[2px] my-5 w-full" ></div>
+				<p class="text-3xl mb-10 ultra">NGN 50,000</p>
+				<div class="w-full p-5 flex gap-5 items-center justify-between">
+					<div class="greenDot"></div>
+					<p class="flex-1 font-semibold text-lg">Daily Trading Profit: <b>5,000 Naira</b></p>
+				</div>
+				<div class="w-full p-5 flex gap-5 items-center justify-between">
+					<div class="greenDot"></div>
+					<p class="flex-1 font-semibold text-lg">Daily Trading Profit: Every <b>24 Hour</b></p>
+				</div>
+				<div class="w-full p-5 flex gap-5 items-center justify-between">
+					<div class="greenDot"></div>
+					<p class="flex-1 font-semibold text-lg">Daily Trading: Enabled</p>
+				</div>
+				<a href="deposit">
+					<button class="greenBtn shadow-md shadow-green-700 p-4 rounded-full px-10 font-bold text-lg tracking-wide my-5">
+						Buy Package
+					</button>
+				</a>
+			</div>
+			<div class="border border-gray-800 rounded-md lightDark p-3 my-10 shadow-md shadow-gray-700 flex flex-col items-center justify-center gap-1">
+				<h1 class="ultra text-2xl md:text-4xl mt-4 text-green-500 tracking-wider"><b class="text-yellow-500">X</b>Lite Package</h1>
+				<p class="text-green-100">Get <b>NGN 10,000</b> as profit Every 24 Hour</p>
+				<div class="greenLine h-[2px] my-5 w-full" ></div>
+				<p class="text-3xl mb-10 ultra">NGN 100,000</p>
+				<div class="w-full p-5 flex gap-5 items-center justify-between">
+					<div class="greenDot"></div>
+					<p class="flex-1 font-semibold text-lg">Daily Trading Profit: <b>5,000 Naira</b></p>
+				</div>
+				<div class="w-full p-5 flex gap-5 items-center justify-between">
+					<div class="greenDot"></div>
+					<p class="flex-1 font-semibold text-lg">Daily Trading Profit: Every <b>24 Hour</b></p>
+				</div>
+				<div class="w-full p-5 flex gap-5 items-center justify-between">
+					<div class="greenDot"></div>
+					<p class="flex-1 font-semibold text-lg">Daily Trading: Enabled</p>
+				</div>
+				<a href="deposit">
 					<button class="greenBtn shadow-md shadow-green-700 p-4 rounded-full px-10 font-bold text-lg tracking-wide my-5">
 						Buy Package
 					</button>
