mining turns trading

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -98,10 +98,10 @@
 				<img src="/public/img/mining.png" class="h-[400px] max-w-[300px] md:max-w-[500px] mx-5 object-contain" alt="">
 				<div class="w-full flex flex-col items-center md:items-start justify-center">
 					<h1 class="pblue text-6xl font-extrabold opacity-70 mb-4">Step Three</h1>
-					<h1 class="text-3xl font-bold text-gray-300 text-center md:text-left">Activate Mining Engine</h1>
+					<h1 class="text-3xl font-bold text-gray-300 text-center md:text-left">Activate AI Trading Bots</h1>
 					<div class="dlbtn h-[2px] my-5 w-full" ></div>
 					<p class="text-lg md:text-xl font-semibold text-gray-200 text-center md:text-left max-w-[320px] md:max-w-[450px] ">
-						On your dashboard, Mining Engine have been setup, Stamp on the start button and let us mine for you in the background.
+						On your dashboard, Our Trading Bots have been setup, Stamp on the start button to activate AI bots to trade for you in the background.
 					</p>
 				</div>
 			</div>
