--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -18,7 +18,7 @@
                                     <h1 class="ultra text-xl md:text-4xl mt-4 text-green-500 tracking-wider text-center">
                                         Welcome <span class="fullName"></span>
                                     </h1>
-                                    <p class="text-green-100">Enjoy a lot of benefits as a citizen of NairaCity</p>
+                                    <p class="text-green-100 text-center">Enjoy a lot of benefits as a citizen of NairaCity</p>
                                     <div class="greenLine h-[2px] my-5 w-full"></div>
                                     <!-- <p class="text-3xl mb-10 ultra">NGN 6,000</p> -->
                                     <div class="w-full p-5 flex gap-5 items-center justify-between">
@@ -69,7 +69,7 @@
                                     <div class="hidden minemineParent">
                                         <p class="text-green-500 font-bold text-center text-lg mt-5">Total amount traded:
                                         </p>
-                                        <p class="bg-gray-400 py-3 px-20 rounded-md text-black ultra text-2xl">NGN <span class="boldMineBal"></span>
+                                        <p class="bg-gray-400 py-3 px-20 rounded-md text-black ultra text-2xl text-center">NGN <span class="boldMineBal"></span>
                                         </p>
                                         
                                     </div>
