changes in admin page

--- a/views/admin/partials/adminside.ejs
+++ b/views/admin/partials/adminside.ejs
@@ -1,4 +1,6 @@
-<section class="bg-[#afafaf] sidebar hidden md:block z-10 col-span-1 border-r border-green-200 min-h-screen h-full pt-28">
+
+
+<section class="bg-[#afafaf] sidebar hidden md:block z-10 col-span-1 border-r border-green-200 min-h-screen pt-28">
     <div>
         <!-- Dashboard -->
         <a href="/admin">
