--- a/views/admin/users.ejs
+++ b/views/admin/users.ejs
@@ -35,6 +35,9 @@
                                     Verified
                                 </th>
                                 <th scope="col" class="px-6 py-3">
+                                    Package
+                                </th>
+                                <th scope="col" class="px-6 py-3">
                                     <span class="sr-only">Edit</span>
                                 </th>
                             </tr>
