--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -150,7 +150,7 @@
                                                 <!-- <tr
                                                     class="border-b hover:bg-opacity-70 bg-opacity-40 bg-gray-800 border-gray-700">
                                                     <th scope="row"
-                                                        class="px-6 py-4 font-medium text-gray-900 text-white whitespace-nowrap">
+                                                        class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap">
                                                         Mark Rodrugez
                                                     </th>
                                                     <td class="px-6 py-4">
