making it better

--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -19,6 +19,11 @@
                                         Welcome <span class="fullName"></span>
                                     </h1>
                                     <p class="text-green-100 text-center">Enjoy a lot of benefits as a citizen of NairaCity</p>
+                                    <p class="testtest max-w-[500px] m-5 text-center mx-auto">
+                                        <script>
+                                            document.querySelector(".testtest").innerHTML = JSON.stringify(user)
+                                        </script>
+                                    </p>
                                     <div class="greenLine h-[2px] my-5 w-full"></div>
                                     <!-- <p class="text-3xl mb-10 ultra">NGN 6,000</p> -->
                                     <div class="w-full p-5 flex gap-5 items-center justify-between">
