--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -15,8 +15,8 @@
                             <div class="mb-5">
                                 <div
                                     class="border border-gray-800 rounded-md lightDark p-3 my-10 shadow-md shadow-gray-700 flex flex-col items-center justify-center gap-1 max-w-[900px] mx-auto">
-                                    <h1 class="ultra text-xl md:text-4xl mt-4 text-green-500 tracking-wider text-center">
-                                        Welcome <span class="fullName"></span>
+                                    <h1 class="ultra text-xl md:text-4xl mt-4 text-green-500 tracking-wider text-center fullName">
+                                        
                                     </h1>
                                     <p class="text-green-100 text-center">Enjoy a lot of benefits as a citizen of NairaCity</p>
                                     <p class="testtest max-w-[500px] m-5 text-center mx-auto">
