--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -10,20 +10,23 @@
 
                     <!-- Main Section -->
                     <section class="col-span-4 md:col-span-3 mt-16">
+                        <script src="/public/js/dash2.js"></script>
+                        <script>
+                            const newUser = JSON.parse(window.localStorage.getItem('user'));
+                        </script>
                         <div class="mt-10 m-5">
                             <h1 class="ultra text-4xl text-center mt-12">My Dashboard</h1>
                             <div class="mb-5">
                                 <div
                                     class="border border-gray-800 rounded-md lightDark p-3 my-10 shadow-md shadow-gray-700 flex flex-col items-center justify-center gap-1 max-w-[900px] mx-auto">
                                     <h1 class="ultra text-xl md:text-4xl mt-4 text-green-500 tracking-wider text-center fullName">
-                                        
+                                        <p class="fullname max-w-[500px] m-5 text-center mx-auto">
+                                            <script>
+                                                document.querySelector(".fullname").innerHTML = "Welcome" + newUser.name;
+                                            </script>
+                                        </p>
                                     </h1>
                                     <p class="text-green-100 text-center">Enjoy a lot of benefits as a citizen of NairaCity</p>
-                                    <p class="testtest max-w-[500px] m-5 text-center mx-auto">
-                                        <script>
-                                            document.querySelector(".testtest").innerHTML = JSON.stringify(user)
-                                        </script>
-                                    </p>
                                     <div class="greenLine h-[2px] my-5 w-full"></div>
                                     <!-- <p class="text-3xl mb-10 ultra">NGN 6,000</p> -->
                                     <div class="w-full p-5 flex gap-5 items-center justify-between">
